--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,7 +1,10 @@
 li {
     display: block;
-    width: 400px;
-    height: 40px;
-    margin: 3px;
-    border: 2px solid #73AD21;
+    width: 600px;
+    margin: 2px 0;
+    padding: 20px;
+}
+
+.right {
+    float: right;
 }
