--- a/templates/todo.html
+++ b/templates/todo.html
@@ -1,15 +1,34 @@
 <html>
     <head>
         <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     </head>
 
     <body>
-        <ul>
-            {% for t in tasks %}
-            <li style="background-color: {{ t.task_color }}">{{t.name}}, last done: {{t.last_done | datetime}} <a href={{ url_for('update', task_id=t.task_id) }}>Do</a>|
-            <a href={{ url_for('edit', task_id=t.task_id) }}>Edit</a></li>
-            {% endfor %}
-        </ul>
+        <div class="jumbotron text-center">
+            <h1>Fuzzy To-Do List</h1>
+        </div>
+
+        <div class="container">
+            <div class="row">
+                <ul>
+                    {% for t in tasks %}
+                    <li style="background-color: {{ t.task_color }}"><strong>{{t.name}}</strong> last done: {{t.last_done | datetime}}
+                    <a href={{ url_for('update', task_id=t.task_id) }}>
+                        <button type="button" class="btn btn-default btn-sm right">
+                            <span class="glyphicon glyphicon-ok"></span>
+                        </button>
+                    </a>
+                    <a href={{ url_for('edit', task_id=t.task_id) }}>
+                        <button type="button" class="btn btn-default btn-sm right">
+                            <span class="glyphicon glyphicon-pencil"></span> 
+                        </button>
+                    </a>
+                    </li>
+                    {% endfor %}
+                </ul>
+            </div>
+        </div>
         <div>
             <form action="{{ url_for('todo') }}" method="POST">
                 <input name="task" 
